# TransCoda

./: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  EULA.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  skills-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: theme.ts
src/themes/: os-macos-dark.ts  os-macos-light.ts  os-ubuntu-dark.ts  os-ubuntu-light.ts  os-windows-11-dark.ts  os-windows-11-light.ts  transcoda-drag.ts  transcoda-minimal.ts  transcoda-rainbow.ts
