[package]
name = "transcoda"
version = "1.0.0"
description = "Every file deserves a fabulous finale"
authors = ["albertolicea00"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.0.3", features = ["devtools", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
open = "5.1"
dirs = "5.0"
rfd = "0.14"
libc = "0.2"
